hazelcast/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast
spec:
  clusterIP: None
  selector:
    app: my-app
  ports:
    - port: 5701
